# bourbon

./: .gitignore  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
migrations/: 001_initial.sql  002_watchlist.sql
src/: api.py  config.py  db.py  digest.py  filters.py  main.py  models.py
src/notifiers/: base.py  email.py  ntfy.py
src/scrapers/: base.py  breaking_bourbon.py  caskers.py  reddit.py  seelbachs.py  unicorn.py  virginia_abc.py  whisky_auctioneer.py
tests/: test_db.py  test_filters.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/src/: App.tsx  main.tsx
web/src/components/: ListingCard.tsx  Watchlist.tsx
web/src/lib/: api.ts
